tests/machine/x/ocaml/membership.ml
let nums = [1;2;3]

let () =
  print_endline (2 in nums)
  print_endline (4 in nums)
